--- a/about.html
+++ b/about.html
@@ -1,22 +1,19 @@
-﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+﻿<!DOCTYPE html>
 <html>
 <head>
-<title></title>
-<link type="text/css" href="css/custom-theme/jquery-ui-1.8.2.custom.css" rel="Stylesheet" />	
-<script type="text/javascript" src="jquery/jquery-1.4.2.min.js"></script>
-<script type="text/javascript" src="jquery/jquery-ui-1.8.2.custom.min.js"></script>
-<script type="text/javascript" src="js/cpjshelper.js"></script>
+    <title>About CodeProject Reputation Watcher</title>
+    <link type="text/css" href="css/custom-theme/jquery-ui-1.8.2.custom.css" rel="Stylesheet" />
+    <script type="text/javascript" src="jquery/jquery-1.11.1.min.js"></script>
+    <script type="text/javascript" src="jquery/jquery-ui-1.8.2.custom.min.js"></script>
+    <script type="text/javascript" src="js/analytics.js"></script>
 </head>
 
 <body bgcolor="#ffcc66">
-    <script type="text/javascript">
-        _gaq.push(['_trackPageview']);
-    </script>
 <div style="padding-left: 5px">
     <h3>CodeProject Reputation Watcher Chrome Extension</h3>
-    Version: V1.6<br />
-    Date: 21st March 2011<br />
-    Copyright: David M. Auld (c)2011 ; <a href="http://www.dave-auld.net/" target="_blank">http://www.dave-auld.net/</a>
+    Version: V2.0<br />
+    Date: 17th June 2014<br />
+    Copyright: David M. Auld (c)2014 ; <a href="http://www.dave-auld.net/" target="_blank">http://www.dave-auld.net/</a>
     <p id="description">
     CodeProject Reputation Watcher is an extension written for the <a href="http://www.google.com/chrome/">Google Chrome</a> 
     browser. The extension was written as a learning exercise, and was my first attempt at an extension.<br />
